--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,11 @@ default: &default
   pool: 5
   timeout: 5000
 
+prod: &prod
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+
 development:
   <<: *default
   database: db/development.sqlite3
@@ -21,5 +26,6 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  <<: *prod
+  database: url_shortner
+  password: testing
