--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -16,7 +16,7 @@ common: &default_settings
 
   # Your application name. Renaming here affects where data displays in New
   # Relic.  For more details, see https://docs.newrelic.com/docs/apm/new-relic-apm/maintenance/renaming-applications
-  app_name: My Application
+  app_name: hase.io
 
   # To disable the agent regardless of other settings, uncomment the following:
   # agent_enabled: false
@@ -48,3 +48,4 @@ staging:
 production:
   <<: *default_settings
   NEW_RELIC_AGENT_ENABLED: true
+  monitor_mode: true
